# Atomica

./: CMakeLists.txt  Doxyfile  LICENSE  README.md
config/: config.ini
src/: Atom.cpp  Atom.h  Atomica.cpp  Bond.cpp  Bond.h  BondCalculator.cpp  BondCalculator.h  Camera.cpp  Camera.h  ConfigManager.cpp  ConfigManager.h  CoulombSolver.cpp  CoulombSolver.h  ImGuiManager.cpp  ImGuiManager.h  Logger.cpp  Logger.h  MathUtils.cpp  MathUtils.h  Molecule.cpp  Molecule.h  NuclearReactor.cpp  NuclearReactor.h  OrbitalModel.cpp  OrbitalModel.h  Particle.cpp  Particle.h  PhysicsEngine.cpp  PhysicsEngine.h  Renderer.cpp  Renderer.h  ShaderManager.cpp  ShaderManager.h
